[gd_scene load_steps=24 format=2]

[ext_resource path="res://mobs/Spawner.gd" type="Script" id=1]
[ext_resource path="res://mobs/enemy_soldier/EnemySoldier.tscn" type="PackedScene" id=2]
[ext_resource path="res://mobs/villager/Villager.tscn" type="PackedScene" id=3]
[ext_resource path="res://gate/Gate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Despawner.gd" type="Script" id=6]
[ext_resource path="res://MoraleBar.gd" type="Script" id=7]
[ext_resource path="res://TimerText.gd" type="Script" id=8]
[ext_resource path="res://assets/grass.png" type="Texture" id=9]
[ext_resource path="res://assets/gate_fg.png" type="Texture" id=10]
[ext_resource path="res://assets/gate_bg.png" type="Texture" id=11]
[ext_resource path="res://assets/hole_fg.png" type="Texture" id=12]
[ext_resource path="res://assets/hole_bg.png" type="Texture" id=13]
[ext_resource path="res://Font.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/gate_destroyed.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/enemy_entered.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/villager_entered.wav" type="AudioStream" id=17]

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.266667, 0.266667, 0.266667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 243.571 )

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.266667, 0.266667, 0.266667, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Curve" id=6]
max_value = 4.0
_data = [ Vector2( 0, 1.56364 ), 0.0, -1.56364, 0, 1, Vector2( 1, 0 ), -1.56364, 0.0, 1, 0 ]

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.317647, 0.839216, 0.905882, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 319, 249 )
scale = Vector2( 1.29409, 0.986496 )
current = true
zoom = Vector2( 0.99, 0.99 )
limit_left = -10000087

[node name="Grass2" type="Sprite" parent="."]
position = Vector2( -445, 472 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
offset = Vector2( 320, -16 )

[node name="Grass3" type="Sprite" parent="."]
position = Vector2( -57, 470 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
offset = Vector2( 320, -16 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( -321, 399 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
offset = Vector2( 320, -16 )

[node name="HoleBg" type="Sprite" parent="."]
position = Vector2( 440.4, 371.4 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 13 )

[node name="GateBg" type="Sprite" parent="."]
position = Vector2( 451, 310 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[node name="GateHolder" type="Node2D" parent="."]
position = Vector2( 448, 355 )

[node name="Gate" parent="GateHolder" instance=ExtResource( 4 )]
scale = Vector2( 1.5, 1.5 )

[node name="GateHealthBar" type="ProgressBar" parent="GateHolder"]
margin_left = -37.0
margin_top = -142.0
margin_right = 58.0
margin_bottom = -132.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 18.8309
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HoleFg" type="Sprite" parent="."]
position = Vector2( 440.4, 371.4 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 12 )

[node name="Despawner" type="Node2D" parent="."]
position = Vector2( 735, 185 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Despawner"]
position = Vector2( 0, 10 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawner/Area2D"]
position = Vector2( -161, 48 )
shape = SubResource( 1 )

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( -76, 406 )
script = ExtResource( 1 )
mob_scenes = [ ExtResource( 2 ), ExtResource( 3 ) ]
mob_weights = [ 1.0, 1.0 ]

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 3.0
autostart = true

[node name="MoraleBar" type="ProgressBar" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 610.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
percent_visible = false
script = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 284.0
margin_top = 39.0
margin_right = 330.0
margin_bottom = 69.0
rect_scale = Vector2( 2, 2.5 )
custom_colors/font_color_shadow = Color( 0.196078, 0.235294, 0.223529, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_fonts/font = ExtResource( 14 )
text = "60"
align = 1
valign = 1
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="Label"]
wait_time = 91.0

[node name="GateFg" type="Sprite" parent="."]
position = Vector2( 448, 308 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 448, 406 )
rotation = 3.48019
emitting = false
amount = 200
lifetime = 1.5
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 60, 1 )
direction = Vector2( 0.304, 0.961 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 1.0
scale_amount = 6.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 6 )
color = Color( 0.380392, 0.333333, 0.305882, 1 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="AudioVillagerEntered" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 17 )
volume_db = -5.0

[node name="AudioEnemyEntered" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 16 )
volume_db = -5.0

[node name="AudioGateDestroyed" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )

[connection signal="area_entered" from="Despawner/Area2D" to="Despawner" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
